<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePwdPage">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/main_icon" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="비밀번호 변경하기"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/secondBtnColor"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:text="@string/changePwdTitle"
                android:textSize="16sp"
                tools:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="새 비밀번호"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPwd_changePwd"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:background="@drawable/edge"
                    android:hint="@string/changePwd"
                    android:inputType="text|textPassword"
                    android:padding="8dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="비밀번호 확인"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPwdConfirm_changePwd"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/edge"
                    android:hint="@string/changePwdConfirm"
                    android:inputType="text|textPassword"
                    android:padding="8dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOk_changePwd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/defaultBtnColor" />

            <Button
                android:id="@+id/btnCancel_changePwd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/cancel"
                app:backgroundTint="@color/secondBtnColor"
                tools:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>