<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPwdPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/main_icon" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="아이디/비밀번호 찾기"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnId_findPwd"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_btn_second_color"
                android:text="아이디"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPwd_findPwd"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_btn_main_color"
                android:text="비밀번호"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/findExpTitle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/findExpContent" />

            <EditText
                android:id="@+id/etId_findPwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edge"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="8dp"
                tools:hint="@string/putId" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="이름"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etName_findPwd"
                    android:layout_width="270dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/edge"
                    android:hint="이름을 입력하세요."
                    android:inputType="text"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="휴대전화"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPhone_findPwd"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:background="@drawable/edge"
                    android:ems="10"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/btnConfirmNum_findPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:text="@string/confirmNum"
                    app:backgroundTint="@color/thirdBtnColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="인증번호"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etConfirmNum_findPwd"
                    android:layout_width="270dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:background="@drawable/edge"
                    android:hint="@string/confirmNumContent"
                    android:inputType="text"
                    android:padding="8dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="6dp"
                android:text="@string/confirmNumComent"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk_findPwd"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle_btn_main_color"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>